--- a/index.html
+++ b/index.html
@@ -31,109 +31,106 @@
      <div class="wrapper">
         <nav class="navbar navbar-expand-lg w-100 d-flex flex-direction-row position-fixed" style="z-index: 900; background-color: #e3f2fd;">
             <div class="container-fluid d-flex flex-direction-row-reverse">
-                <img src="img/logo.png" alt="Logo" style="width:70px;" class="rounded-pill">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="float-left" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#section2">Sobre</a>
-                  </li>  
-                  <li class="nav-item">
-                    <a class="nav-link" href="#section3">Desevolvedores</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Cadastro</a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Paciente</a></li>
-                      <li><a class="dropdown-item" href="#">Hospital</a></li>
+                <img src="img/other_logo.png" alt="Logo" style="width:70px; image-rendering: pixelated;">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="float-left" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#section2">Sobre</a>
+                            </li>  
+                            <li class="nav-item">
+                                <a class="nav-link" href="#section3">Desevolvedores</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Cadastro</a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item" href="#">Paciente</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#">Hospital</a>
+                                    </li>
+                                </ul>
+                            </li>
                     </ul>
-                  </li>
-                </ul>
               </div>
             </div>
-          </nav>
-          
-
-          <div id="home">
-          <div class="row p-9 pb-0 align-items-center rounded-3 position-relative">
-            <div class="col-lg-9 p-5 p-lg-4 pt-lg-3">
-              <h1>Bem Vindo ao Consultium!</h1>
-              <p class="lead">Um jeito facil e rapido de agendar sua consulta e sem precisar sair de casa.</p>
-              <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Baixe o Aplicativo</button>
-              </div>
+        </nav>
+        <div id="home">
+            <div class="row p-9 pb-0 align-items-center rounded-3 position-relative">
+                <div class="col-lg-9 p-5 p-lg-4 pt-lg-3">
+                    <img src="img/co.jpeg" alt="imagem Consultium">
+                    <h1>Bem Vindo ao Consultium!</h1>
+                    <p class="lead">Um jeito facil e rapido de agendar sua consulta e sem precisar sair de casa.</p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Baixe o Aplicativo</button>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-2 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <img class="rounded-lg-3" src="img/t1.png" class="rounded float-right" alt="" width="300">
-            </div>
-          </div>
         </div>
-
-          <div id="servicos" class="block d-flex flex-column position-relative">
+        <div id="servicos" class="block d-flex flex-column position-relative">
             <div class="container">
-              <h2 class="title text-center">Nossos Objetivos</h2>
-              <div class="row">
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                  <a href="#" class="destaque">  
-                    <div class="container mb-3">
-                      <i class='fas fa-laptop-medical' style='font-size:100px'></i>
+                <h2 class="title text-center">Nossos Objetivos</h2>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <a href="#" class="destaque">  
+                            <div class="container mb-3">
+                                <i class='fas fa-laptop-medical' style='font-size:100px'></i>
+                            </div>
+                            <h5>Agilidade</h5>
+                            <p class="mb-0 text-body">
+                                Facilita o acesso nos agendamentos de consultas.
+                            </p>
+                        </a>
                     </div>
-                    <h5>Agilidade</h5>
-                    <p class="mb-0 text-body">
-                      Facilita o acesso nos agendamentos de consultas.
-                    </p>
-                  </a>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                  <a href="#" class="destaque ">  
-                    <div class="container mb-3">
-                      <i class='fas fa-user-friends' style='font-size:100px'></i>
+                    <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <a href="#" class="destaque ">  
+                            <div class="container mb-3">
+                                <i class='fas fa-user-friends' style='font-size:100px'></i>
+                            </div>
+                            <h5>Eficiência</h5>
+                            <p class="mb-0 text-body">
+                                Aumenta o acesso da população a saúde pública.
+                            </p>
+                        </a>
                     </div>
-                    <h5>Eficiência</h5>
-                    <p class="mb-0 text-body">
-                      Aumenta o acesso da população a saúde pública.
-                    </p>
-                  </a>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                  <a href="#" class="destaque">  
-                    <div class="container mb-3">
-                      <i class='fas fa-ambulance' style='font-size:100px'></i>
+                    <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <a href="#" class="destaque">  
+                            <div class="container mb-3">
+                                <i class='fas fa-ambulance' style='font-size:100px'></i>
+                            </div>
+                            <h5>Segurança</h5>
+                            <p class="mb-0 text-body">
+                                Em casos emergenciais facilita o acesso ao samu.
+                            </p>
+                        </a>
                     </div>
-                    <h5>Segurança</h5>
-                    <p class="mb-0 text-body">
-                      Em casos emergenciais facilita o acesso ao samu.
-                    </p>
-                  </a>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                  <a href="#" class="destaque">  
-                    <div class="container mb-3">
-                      <i class='far fa-hospital' style='font-size:100px'></i>
+                    <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <a href="#" class="destaque">  
+                            <div class="container mb-3">
+                                <i class='far fa-hospital' style='font-size:100px'></i>
+                            </div>
+                            <h5>Modernidade</h5>
+                            <p class="mb-0 text-body">
+                                Auxilia nas melhorias dos serviços de saúde.
+                            </p>
+                        </a>
                     </div>
-                    <h5>Modernidade</h5>
-                    <p class="mb-0 text-body">
-                      Auxilia nas melhorias dos serviços de saúde.
-                    </p>
-                  </a>
                 </div>
-              </div>
             </div>
-          </div>
-  
-  <div id="section2" class="d-flex flex-direction-row justify-content-between container-fluid mb-2" style="padding:50px 40px;">
-    <div class="col-md-6 align-self-right">
-      <h2 class="title">POR QUÊ?
-      </h2>
-      <h4 class="subtitle"
-      ><em>Consultium(latim):significa consultar.
-    </h4></em>
+        </div>
+        <div id="section2" class="d-flex flex-direction-row justify-content-between container-fluid mb-2" style="padding:50px 40px;">
+            <div class="col-md-6 align-self-right">
+                <h2 class="title">POR QUÊ?</h2>
+      <h4 class="subtitle">
+        <em>Consultium(latim):significa consultar.</em>
+    </h4>
       <p>
         O tema escolhido surgiu em decorrência do estado crítico da saúde da população 
         brasileira de forma geral, especialmente nesse período pandêmico, o Consultium tem o 
