--- a/index.html
+++ b/index.html
@@ -1,94 +1,149 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<!-- Font Awesome -->
-<link
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-  rel="stylesheet"
-/>
-<!-- Google Fonts -->
-<link
-  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-  rel="stylesheet"
-/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<!-- MDB -->
-<link
-  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
-  rel="stylesheet"
-/>
-<title>Consultium</title>
-<script src="main.js"></script>
-</head>
-
-<body>
-	<div class="position-absolute w-100 d-flex flex-column">
-        <nav class="navbar navbar-expand-lg w-100 d-flex flex-row position-fixed" style="z-index: 900; background-color: #e3f2fd;">
-            <div class="container-fluid d-flex justify-content-between w-100">
-                <img src="img/other_logo.png" alt="Logo" style="width:70px;">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-                <div class="float-left" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#section2">Sobre</a>
-                            </li>  
-                            <li class="nav-item">
-                                <a class="nav-link" href="#section3">Desevolvedores</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Cadastro</a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a class="dropdown-item" href="#">Paciente</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="#">Hospital</a>
-                                    </li>
-                                </ul>
-                            </li>
-                    </ul>
-              </div>
+	<head>
+		<meta charset="UTF-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<link rel="stylesheet" type="text/css" href="css/style.css">
+    	<!-- CSS only -->
+    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    	<!-- JavaScript Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+		<!-- Font Awesome -->
+		<link
+  			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  			rel="stylesheet"
+		/>
+		<!-- Google Fonts -->
+		<link
+  			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+		<!-- MDB -->
+		<link
+  			href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
+  			rel="stylesheet"
+		/>
+		<title>Consultium</title>
+		<!--<script src="main.js"></script>-->
+	</head>
+	<body>
+ 
+    <nav class="navbar navbar-expand-lg navbar navbar-custom fixed-top" style="z-index: 900; background-color: #87CEEB">
+        <div class="container">
+            <a class="navbar-brand logo-image" href="index.html"><img src="img/logo.png" alt="alternative"></a> 
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            </button>
+            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarsExampleDefault">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#sobre">SOBRE</a>
+                    </li>
+					<li class="nav-item">
+                        <a class="nav-link page-scroll" href="#section2">POR QUE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#section3">DESENVOLVEDORES</a>
+                    </li>
+				</ul>
             </div>
-        </nav>
-        <div class="position-relative d-flex flex-column w-100 h-100 mt-25" style="margin-top: 150px; margin-bottom: 120px;">
-            <div class="d-flex flex-column h-100 align-self-center">
-				<h1>Bem Vindo ao Consultium!</h1>
-            	<p class="lead">Um jeito facil e rapido de agendar sua consulta e sem precisar sair de casa.</p>
-            	<div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                	<button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Baixe o Aplicativo</button>
-            	</div>
-			</div>
-        </div>
-		<div id="servicos" class="position-relative d-flex flex-column position-relative" style="margin-bottom: 120px;">
-			<div class="container">
-				<h2 class="title text-center">Nossos Objetivos</h2>
-				<div class="row" style="padding-top: 65px;">
-					<script type="text/javascript"> objetivos(); </script>
+        </div> 
+    </nav>
+	<header id="header" class="header">
+   		<div class="header-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col my-5  ps-5 py-5">
+                        <div class="text-container">
+                            <h1>Consultium</h1>
+                            <p class="text-white">Um jeito facil e rapido de agendar sua consulta e sem precisar sair de casa.</p>
+							<button type="button" class="btn bg-white bi bi-arrow-down-circle btn-rounded" href='#'>DOWNLOAD</button>
+                        </div>
+                    </div> 
+                    <div class="col">
+                        <div class="image-container modal-dialog modal-lg">
+                            <div class="img-wrapper">
+                                <img class="w-50" src="img/mage.jpeg" alt=""/>
+                            </div> 
+                        </div> 
+                    </div> 
+                </div>
+			</div> 
+        </div> 
+    </header> 
+    <svg class="header-frame" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 310"><defs><style>.cls-1{fill:#87CEEB;}</style></defs><title>header-frame</title><path class="cls-1" d="M0,283.054c22.75,12.98,53.1,15.2,70.635,14.808,92.115-2.077,238.3-79.9,354.895-79.938,59.97-.019,106.17,18.059,141.58,34,47.778,21.511,47.778,21.511,90,38.938,28.418,11.731,85.344,26.169,152.992,17.971,68.127-8.255,115.933-34.963,166.492-67.393,37.467-24.032,148.6-112.008,171.753-127.963,27.951-19.26,87.771-81.155,180.71-89.341,72.016-6.343,105.479,12.388,157.434,35.467,69.73,30.976,168.93,92.28,256.514,89.405,100.992-3.315,140.276-41.7,177-64.9V0.24H0V283.054Z"/></svg>
+    <div id="sobre" class="row container-fluid mb-1">
+		<div class="container">
+			<div class="row my-5">
+				<div class="col-md-6">
+					<img src="img/tcc/login.png" class="img-fluid w-50 rounded d-block mx-auto" alt=""/>
+				</div>
+				<div class="col-md-6 my-md-auto">
+					<h3> Projetado para atendimento domiciliar.</h3>
+					<p class="text-muted lead">
+						Marque consultas em em sua casa, a qualquer hora, em qualquer dispositivo.  
+						Acesso em tempo real a chat de comunicação com datas de sua consulta.
+					</p>
+					<h3>Um nível mais alto de engajamento, oferecendo o melhor atendimento.</h3>
+					<p class="text-muted lead">
+						O Consultium foi projetado para quem está em diculdade de locomoção.
+						Usando o aplicativo móvel da Consultium, os usuários com alguma diculdade em locomoção tem facilidade 
+						na hora de marcar uma consulta sem precisar sair de casa.
+					</p>
 				</div>
 			</div>
 		</div>
-		<div id="section2" class="d-flex flex-direction-row justify-content-between container-fluid mb-2" style="padding:50px 40px;">
-			<div class="col-md-6 align-self-right">
-				<h2 class="title">POR QUÊ?</h2>
-				  <h4 class="subtitle">
-						<em>
-							Consultium(latim):significa consultar.
-						</em>
-					</h4>
-				  <p>
+	</div>
+	
+	<div id="servicos" class="position-relative row">
+		<div class="container px-2">
+			<div class="row" style="padding-top: 10px;">
+				<h3 class="title text-center">Com o Consultium você tem:</h3>
+				<div class="col col-md-2 mx-5 p-3 bd-highlight">
+					<a href="#" class="destaque">  
+						<div class="container mb-1">
+							<i class='fas fa-laptop-medical' style='font-size:30px;'></i>
+						</div>
+						<h5>Agilidade</h5>
+					</a>
+				</div>
+				<div class="col col-md-2 mx-5 p-2 bd-highlight">
+					<a href="#" class="destaque">  
+						<div class="container mb-2">
+							<i class='fas fa-user-friends' style='font-size:30px;'></i>
+						</div>
+						<h5>Segurança</h5>
+						</a>
+					</div>
+					<div class="col col-md-2 mx-5 p-2 bd-highlight">
+						<a href="#" class="destaque">  
+							<div class="container mb-2">
+								<i class='fas fa-ambulance' style='font-size:30px;'></i>
+							</div>
+							<h5>Eficiência</h5>
+						</a>
+					</div>
+					<div class="col col-md-2 mx-5 p-2 bd-highlight">
+						<a href="#" class="destaque ">  
+							<div class="container mb-2">
+								<i class='fas fa-hospital' style='font-size:30px;'></i>
+							</div>
+							<h5>Modernidade</h5>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div id="section2" class="row container-fluid mb-2" style="padding:40px 40px;">
+			<hr class="mt-5"/>
+			<div class="col col-md-5">
+				<h3 class="title text-center">POR QUÊ?</h3>
+					<p class="text-muted lead">
 					O tema escolhido surgiu em decorrência do estado crítico da saúde da população 
 					brasileira de forma geral, especialmente nesse período pandêmico, o Consultium tem o 
 					intuito de tentar auxiliar na melhoria da saúde da população do Vale do Ribeira, 
@@ -96,43 +151,96 @@
 					estudado tem a intenção de auxiliar a população de forma geral.
 				  </p>
 			</div>
-			<div id="carousel" data-bs-interval="3000" class="d-flex flex-direction-row justify-content-between float-end" w-75 carousel slide data-bs-ride="carousel">
+			<div id="carousel" data-bs-interval="3000" class="col w-50 carousel slide" data-bs-ride="carousel">
 				  <div class="carousel-inner">
-					<div class="carousel-item active">
-						  <img src="img/graf3.jpeg" class="d-block w-60 img-fluid" alt="...">
+					<div class="carousel-item active min-vh-50">
+						  <img src="img/graf3.jpeg" class="d-block img-fluid shadow-lg" alt="...">
 					</div>
-					<div class="carousel-item">
-						  <img src="img/graf1.jpeg" class="d-block position-relative w-100 img-fluid" alt="...">
+					<div class="carousel-item min-vh-50">
+						  <img src="img/graf1.jpeg" class="d-block img-fluid shadow-lg" alt="...">
 					</div>
 				  </div>
 			</div>
-		  </div>
-		<div id="section3" class="d-flex flex-row justify-content-around container-fluid " style="padding:50px 40px;">
+		</div>
+		    
+
+	
+						
+		<div id="section3" class="d-flex flex-row justify-content-around container" style="padding:40px 40px;">
 			<div class="container mt-5">
+				<hr class="mt-5"/>
 				<ul class="list-group list-group-horizontal d-flex justify-content-around">
-					<script> cards(); </script>	
+					<li class='list-group'>
+						<div class='card shadow-lg p-3 mb-5 bg-white rounded' style='width:293px'> 
+							<img class='card-img-top' src="img/integrante2.jpg" alt="">
+							<div class='card-body'>
+								<h4 class='card-title'>Yasmin</h4>
+								<p class='card-text'>Analista</p>
+								<a target="_blank" href='https://www.linkedin.com/in/yasmin-regina-camargo-guerra-a809b4252/' class="btn fab fa-linkedin-in" style="z-index: 900; background-color: #87CEEB;"></a>
+							    <a target="_blank" href='https://instagram.com/yasmin_r_guerra?igshid=YmMyMTA2M2Y=' class="btn fab fa-instagram" style="z-index: 900; background-color: #87CEEB;"></a>
+								<a target="_blank" href='https://github.com/Yasmin-Regina-Camargo-Guerra' class="btn fab fa-github" style="z-index: 900; background-color: #87CEEB;"></a>					    
+							</div>
+						</div>
+					</li>
+					<li class='list-group'>
+						<div class='card shadow-lg p-3 mb-5 bg-white rounded' style='width:340px'> 
+							<img class='card-img-top' src="img/integrante.jpg" alt="">
+							<div class='card-body'>
+								<h4 class='card-title'>Saulo</h4>
+								<p class='card-text'>Desenvolvedor Mobile</p>
+								<a target="_blank" href='https://www.linkedin.com/in/saulo-de-freitas-285357218/' class="btn fab fa-linkedin-in" style="z-index: 900; background-color: #87CEEB;"></a>
+								<a target="_blank" href='https://instagram.com/saulo.defreitas.94?igshid=YmMyMTA2M2Y=' class="btn fab fa-instagram" style="z-index: 900; background-color: #87CEEB;"></a>
+								<a target="_blank" href='https://github.com/Saulo217' class="btn fab fa-github" style="z-index: 900; background-color: #87CEEB;"></a>
+							</div>
+						</div>
+					</li>
+					<li class='list-group'>
+						<div class='card shadow-lg p-3 mb-5 bg-white rounded' style='width:288px'> 
+							<img class='card-img-top' src="img/integrante3.jpeg" alt="">
+							<div class='card-body'>
+								<h4 class='card-title'>Juliano</h4>
+								<p class='card-text'>Desenvolvedor Web</p>
+								<a target="_blank" href='https://www.linkedin.com/in/jurodri/' class="btn fab fa-linkedin-in rounded" style="z-index: 900; background-color: #87CEEB;"></a>
+							    <a target="_blank" href='https://instagram.com/highustlerwhite?igshid=Nzg3NjI1NGI=' class="btn fab fa-instagram" style="z-index: 900; background-color: #87CEEB;"></a>
+								<a target="_blank" href='https://github.com/jurodri' class="btn fab fa-github" style="z-index: 900; background-color: #87CEEB;"></a>
+							</div>
+						</div>
+					</li>
 				</ul>
 			</div>
 		  </div>
+
 		  <!--Section: Author-->
-		  <footer class="bg-dark text-center text-white">
+		  <svg class="footer-frame" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 79"><defs><style>.cls-2{fill:#87CEEB;}</style></defs><title>footer-frame</title><path class="cls-2" d="M0,72.427C143,12.138,255.5,4.577,328.644,7.943c147.721,6.8,183.881,60.242,320.83,53.737,143-6.793,167.826-68.128,293-60.9,109.095,6.3,115.68,54.364,225.251,57.319,113.58,3.064,138.8-47.711,251.189-41.8,104.012,5.474,109.713,50.4,197.369,46.572,89.549-3.91,124.375-52.563,227.622-50.155A338.646,338.646,0,0,1,1920,23.467V79.75H0V72.427Z" transform="translate(0 -0.188)"/></svg>
+		  <footer class="text-center text-white" style="z-index: 900; background-color: #87CEEB;">
 			<!-- Grid container -->
 			<div class="container p- pb-1">
 				  <!-- Section: Social media -->
 				  <section class="mb-3">
 					<!-- Google -->
-					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+					<a target="_blank" class="tocar btn btn-outline btn-floating m-2 bg-white" href="#!" role="button">
 						<i class="fab fa-google"></i>
 					</a>
 					<!-- Instagram -->
-					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+					<a target="_blank" class="tocar btn btn-outline btn-floating m-2 bg-white" href="https://www.instagram.com/consultium.tcc/?igshid=YmMyMTA2M2Y%3D!" role="button">
 						<i class="fab fa-instagram"></i>
 					</a>
 					<!-- Linkedin -->
-					<a class="btn btn-outline-light btn-floating m-1" href="" role="button">
+					<a target="_blank" class="tocar btn btn-outline bg-white btn-floating m-2" href="#" role="button">
 						<i class="fab fa-linkedin-in"></i>
 					</a>
 				</section>
+				    <!-- Copyright -->
+					<div class="copyright">
+						<div class="container">
+							<div class="row">
+								<div class="col-lg-12">
+									<p class="p-small"><h5>Copyright © Consultium - Mobile App</h5></a></p>
+								</div> <!-- end of col -->
+							</div> <!-- enf of row -->
+						</div> <!-- end of container -->
+					</div> <!-- end of copyright --> 
+					<!-- end of copyright -->
 			</div>
 		</footer>
 	</div>
